About Part Done

--- a/index.html
+++ b/index.html
@@ -61,6 +61,33 @@
                                 Itaque accusamus excepturi non, rem aliquid ut repudiandae sequi reiciendis iusto nobis
                                 explicabo sapiente, ipsum a porro neque.</p>
                 </div>
+                <div class="half-width">
+                        <div class="recipie-box">
+                                <img src="images/food/Project Cover.png" alt="">
+                                <br> <br>
+                                <h3>Recipie Title</h3>
+                                <br>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis natus tempore
+                                        adipisci inventore alias beatae amet ullam pariatur accusamus perspiciatis.</p>
+                        </div>
+                        <div class="recipie-box">
+                                <img src="images/food/Project Cover1.jpg" alt="">
+                                <br>
+                                <br>
+                                <h3>Recipie Title</h3>
+                                <br>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis natus tempore
+                                        adipisci inventore alias beatae amet ullam pariatur accusamus perspiciatis.</p>
+                        </div>
+                        <div class="recipie-box">
+                                <img src="images/food/Project Cover.jpg" alt="">
+                                <br> <br>
+                                <h3>Recipie Title</h3>
+                                <br>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis natus tempore
+                                        adipisci inventore alias beatae amet ullam pariatur accusamus perspiciatis.</p>
+                        </div>
+                </div>
         </section>
 </body>
 
