--- a/index.html
+++ b/index.html
@@ -89,6 +89,26 @@
                         </div>
                 </div>
         </section>
+        <section id="subscribe-section">
+                <div class="subscriber">
+                        <h1>700K</h1>
+                        <p>Youtube Subscribers</p>
+                </div>
+                <div class="subscriber">
+                        <h1>2.4M</h1>
+                        <p>Instagram Followers</p>
+                </div>
+                <div class="subscriber">
+                        <h1>100K</h1>
+                        <p>Drible Shot Likes</p>
+                </div>
+        </section>
+        <footer>
+                <div id="footer-text">
+                        <h2>FOOD CORNER</h2> <br>
+                        <p>Eat healthy to live healthy. Live healthy to live happy</p>
+                </div>
+        </footer>
 </body>
 
 </html>
