--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+        <section class="navigation">
+                <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#recipies">Recipies</a></li>
+                        <li><a href="#blogs">Blogs</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                </ul>
+        </section>
         <section class="top-banner">
                 <div class="half-width">
                         <div class="box headline">
@@ -33,16 +42,14 @@
                         </div>
                 </div>
         </section>
-        <section class="about-part">
+        <section id="about" class="about-part">
                 <div class="half-width">
 
                         <div class="box image">
                                 <img src="images/female/Person Image.png" alt="">
                         </div>
                         <div class="box headline">
-                                <h1>Skip The Diet</h1>
-                                <h1>Just Eat Healthy</h1>
-                                <h1>With Food Corner</h1> <br>
+                                <h1>About Us</h1> <br>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, molestiae provident?
                                         Voluptates quis perferendis debitis quos ea distinctio. Consequuntur
                                         reprehenderit eum, ipsum id vitae quaerat pariatur maxime quisquam dolorem
@@ -54,7 +61,7 @@
                         </div>
                 </div>
         </section>
-        <section class="recipies-part">
+        <section id="recipies" class="recipies-part">
                 <div class="recipie-text">
                         <h2>My Recipies</h2> <br>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati tempora doloremque harum.
