Add new Footer bg

--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
         <section class="top-banner">
                 <div class="half-width">
                         <div class="box headline">
-                                <h1>Skip The Diet</h1>
-                                <h1>Just Eat Healthy</h1>
+                                <h1><span class="orange">Eat</span> Fresh,</h1>
+                                <h1>Bring Your Healthy Life</h1>
                                 <h1>With Food Corner</h1> <br>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, molestiae provident?
-                                        Voluptates quis perferendis debitis quos ea distinctio. Consequuntur
-                                        reprehenderit eum, ipsum id vitae quaerat pariatur maxime quisquam dolorem
-                                        nihil.</p>
+                                <p>Fast food these days covers so many different cuisines from all over the world.
+                                        Originally an American term, it means food on the go, and sometimes it's come to
+                                        mean low quality dishes. However, many cuisines have fast food, and most of it
+                                        is healthy and very good. Fresh, honest and straight forward, fast fooddelivery
+                                        is great to order online as it can be delivered quickly. With a wide range
+                                        available in Dhaka of all kinds of food from fried chicken to burgers, pizzas
+                                        and whole lot more, check out our ideas below. There's lots of healthy choice
+                                        from all over the city.</p>
                                 <br>
                                 <br>
                                 <a class="btn" target="_blank" href="https://www.linkedin.com/in/abdullahalakash/">Order
@@ -55,10 +59,18 @@
                         </div>
                         <div class="box headline">
                                 <h1>About Us</h1> <br>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, molestiae provident?
-                                        Voluptates quis perferendis debitis quos ea distinctio. Consequuntur
-                                        reprehenderit eum, ipsum id vitae quaerat pariatur maxime quisquam dolorem
-                                        nihil.</p>
+                                <p>Food's Corner created Fastfood to deliver your favorite food quickly and wherever you
+                                        want.
+                                        That's why we made an easy to use, convenient and intuitive platform. Log in to
+                                        your account and specify your address. You can go for a guest checkout, but then
+                                        you will miss out on a whole bunch of cool things. Oh yes - we are developing
+                                        many of them, but we will keep them secret for now! So, if you do not know the
+                                        exact delivery address, we'll find you through the geo-location button. We'll
+                                        show you the restaurants that deliver to you. Use the endless possibilities of
+                                        the site to find your favorite food. You can pay online, POS terminal or in
+                                        cash. And it is now a piece of cake - we'll give you a between 40 and 60 minutes
+                                        to hug your beloved ones, to call a friend, or to walk the dog. We want only
+                                        happy customers and that motivates us to strive for the perfect service!</p>
                                 <br>
                                 <br>
                                 <a class="btn" target="_blank" href="https://www.linkedin.com/in/abdullahalakash/">Order
@@ -143,8 +155,8 @@
         </section>
         <footer>
                 <div id="footer-text">
-                        <h2>FOOD CORNER</h2> <br>
-                        <p>Eat healthy to live healthy. Live healthy to live happy</p>
+                        <h2><span class="orange">FOOD</span> CORNER</h2> <br>
+                        <p>Eat fresh, Bring your healthy life</p>
                 </div>
         </footer>
 </body>
