Complete navigation fixed

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                         <li class="site-name">
                                 Food's Corner
                         </li>
-                        <li><a href="#home">Home</a></li>
+                        <li><a href="#main">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#recipies">Recipies</a></li>
                         <li><a href="#blogs">Blogs</a></li>
                         <li><a href="#order">Order</a></li>
                 </ul>
         </section>
-        <section class="top-banner">
+        <section id="main" class="top-banner">
                 <div class="half-width">
                         <div class="box headline">
                                 <h1><span class="orange">Eat</span> Fresh,</h1>
@@ -73,43 +73,48 @@
                                         happy customers and that motivates us to strive for the perfect service!</p>
                                 <br>
                                 <br>
-                                <a class="btn" target="_blank" href="https://www.linkedin.com/in/abdullahalakash/">Order
-                                        Food</a>
+                                <a class="btn" target="_blank"
+                                        href="https://www.linkedin.com/in/abdullahalakash/">Contact Us</a>
                         </div>
                 </div>
         </section>
         <section id="recipies" class="recipies-part">
                 <div class="recipie-text">
                         <h2>My Recipies</h2> <br>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati tempora doloremque harum.
-                                Itaque accusamus excepturi non, rem aliquid ut repudiandae sequi reiciendis iusto nobis
-                                explicabo sapiente, ipsum a porro neque.</p>
+                        <p>Browse restaurants that deliver food to you, or use the Pick Up option. There is something
+                                for every taste and you will easily find the food you crave. Order online or through our
+                                mobile applications for Android and iOS. You will quickly find great dishes and a wide
+                                variety of menus.</p>
                 </div>
                 <div class="half-width">
                         <div class="recipie-box">
                                 <img src="images/food/Project Cover.png" alt="">
                                 <br> <br>
-                                <h3>Recipie Title</h3>
+                                <h3>Easy Thai Soup</h3>
                                 <br>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis natus tempore
-                                        adipisci inventore alias beatae amet ullam pariatur accusamus perspiciatis.</p>
+                                <p>Real talk, though—thai soup are not only good for you, but they are one of my
+                                        favorite bases for an easy soup. They cook quickly, and when blended with a few
+                                        simple.
+                                </p>
                         </div>
                         <div class="recipie-box">
                                 <img src="images/food/Project Cover1.jpg" alt="">
                                 <br>
                                 <br>
-                                <h3>Recipie Title</h3>
+                                <h3>Vegan Mutton</h3>
                                 <br>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis natus tempore
-                                        adipisci inventore alias beatae amet ullam pariatur accusamus perspiciatis.</p>
+                                <p>You can treat your guests to this delicious dish which can be made without much
+                                        stressing or sweating in the kitchen. It will not just leave your guests
+                                        impressed.</p>
                         </div>
                         <div class="recipie-box">
                                 <img src="images/food/Project Cover.jpg" alt="">
                                 <br> <br>
-                                <h3>Recipie Title</h3>
+                                <h3>Liam Charles</h3>
                                 <br>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis natus tempore
-                                        adipisci inventore alias beatae amet ullam pariatur accusamus perspiciatis.</p>
+                                <p>can’t tell you how much I love bao buns: barbecue pork, sweet potatoes, tempura fish
+                                        … just talking about them is making me hungry. But, hey, this is a baking
+                                        column.</p>
                         </div>
                 </div>
         </section>
@@ -156,7 +161,9 @@
         <footer>
                 <div id="footer-text">
                         <h2><span class="orange">FOOD</span> CORNER</h2> <br>
-                        <p>Eat fresh, Bring your healthy life</p>
+                        <h3>Eat fresh, Bring your healthy life</h3> <br>
+                        <p>©2021 Food Corner's All rights reserved.</p>
+                        <p>Mymensingh, Bangladesh || Privacy Policy || Contact Us</p>
                 </div>
         </footer>
 </body>
